# ai-engineer-training-1

./: .gitignore  person_template_config.json
chat_service/: chat_chain.py  main.py  session_manager.py  test_client.py
projects/project1_1/: README.md  Redis连接指南.md  main.py  requirements.txt  架构图和流程图.md  项目文档.md  项目结构说明文档.md
projects/project1_2/: README.md  check_autogen_version.py  main.py  requirements.txt  架构图和流程图.md  项目结构说明文档.md
projects/project3_1/: ask.py  config.py  data_loader.py  kb_manager.py  requirements.txt  webapi.py  功能模块说明.md  架构图.md  流程图.md  项目结构说明文档.md
projects/project3_2/: 架构图.md  (+8 more)
week01/: requirements.txt
week03-local-rag/: chat.py  create_kb.py  html_string.py  main.py  upload_file.py
week04/: agent_server.py  basic_chat_chain.py  langgraph-订机票示例-节点边状态.md  multiturn_order_agent.py  nutrition_meal_plan.py  order_query_agent.py  p13-自定义输出解释器.ipynb  p17-rule_based_intent_recognition_commented.py  p24-LLMRouterChain.ipynb  p30-mem0.ipynb  p35-ReACT-AgentExecutor讲解.md  p35-ReACT-订单流程流程图.md  p35-ReACT.ipynb  p36-tool.ipynb  p42-langgraph-0RAG.ipynb  p42-langgraph-1.ipynb  p44-get_state_history-快照详解.md  p44-snapshot-测试运行流程图.md  p44-snapshot.ipynb  p45-langgraph-studio.ipynb  p47-tool.ipynb  p5-构建第一个对话链.ipynb  plugin_loader.py  pyproject.toml  query_order_intent_recognizer.py  runnable_lambda_example.py  xml_output_parser.py
week04-homework/: pyproject.toml
week04-homework/smart_customer_service/: README.md  __init__.py  agent_server.py  client.py  main.py  plugin_loader.py
week04-homework/smart_customer_service/plugins/: invoice_plugin.py
(+86 files in other folders)
