[project]
name = "week04-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"python-dotenv",
	"fastapi",
	"uvicorn",
	"httpx",
	"langchain",
	"langchain-core",
	"langchain-community",
	"langchain-deepseek",
	"pydantic",
	"dashscope",
	"langgraph",
]
